--- a/projects/web/templates/base.html.twig
+++ b/projects/web/templates/base.html.twig
@@ -41,6 +41,7 @@
 
 		{% block javascripts %}
 			{{ encore_entry_script_tags('app') }}
+			{{ encore_entry_script_tags('confirm-modal') }}
 		{% endblock %}
 	</body>
 </html>
